Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-12600

crash during install_db with innodb_page_size=32K and ibdata1=3M;

    XMLWordPrintable

Details

    Description

      May be related to MDEV-12113 , just this is without encryption.
      When trying to install_db in 10.1 with :
      innodb_page_size=32k
      innodb_data_file_path=ibdata1:3M;ibdata2:10M:autoextend

      I am not getting stack resolved - let me know if this is required to troubleshoot:

      /home/a/mariadb-environs/m9-10.1.22/../_depot/m-tar/10.1.22/bin/mysqld(my_print_stacktrace+0x2e)[0xc0b60e]
      /home/a/mariadb-environs/m9-10.1.22/../_depot/m-tar/10.1.22/bin/mysqld(handle_fatal_signal+0x4bf)[0x76902f]
      /lib/x86_64-linux-gnu/libpthread.so.0(+0x11630)[0x7fd86e014630]
      /lib/x86_64-linux-gnu/libc.so.6(gsignal+0x9f)[0x7fd86cd9a7ef]
      /lib/x86_64-linux-gnu/libc.so.6(abort+0x16a)[0x7fd86cd9c3ea]
      /home/a/mariadb-environs/m9-10.1.22/../_depot/m-tar/10.1.22/bin/mysqld[0xa9b877]
      /home/a/mariadb-environs/m9-10.1.22/../_depot/m-tar/10.1.22/bin/mysqld[0xa49a8f]
      /home/a/mariadb-environs/m9-10.1.22/../_depot/m-tar/10.1.22/bin/mysqld[0xa4f75e]
      /home/a/mariadb-environs/m9-10.1.22/../_depot/m-tar/10.1.22/bin/mysqld[0x94e3a3]
      /home/a/mariadb-environs/m9-10.1.22/../_depot/m-tar/10.1.22/bin/mysqld[0x951768]
      /home/a/mariadb-environs/m9-10.1.22/../_depot/m-tar/10.1.22/bin/mysqld[0x9e2232]
      /home/a/mariadb-environs/m9-10.1.22/../_depot/m-tar/10.1.22/bin/mysqld[0x908304]
      /home/a/mariadb-environs/m9-10.1.22/../_depot/m-tar/10.1.22/bin/mysqld(_Z24ha_initialize_handlertonP13st_plugin_int+0x5e)[0x76eede]
      /home/a/mariadb-environs/m9-10.1.22/../_depot/m-tar/10.1.22/bin/mysqld[0x5c6008]
      /home/a/mariadb-environs/m9-10.1.22/../_depot/m-tar/10.1.22/bin/mysqld(_Z11plugin_initPiPPci+0xbc0)[0x5c6fd0]
      /home/a/mariadb-environs/m9-10.1.22/../_depot/m-tar/10.1.22/bin/mysqld[0x5204ad]
      /home/a/mariadb-environs/m9-10.1.22/../_depot/m-tar/10.1.22/bin/mysqld(_Z11mysqld_mainiPPc+0x8c3)[0x5216f3]
      /lib/x86_64-linux-gnu/libc.so.6(__libc_start_main+0xf1)[0x7fd86cd853f1]
      /home/a/mariadb-environs/m9-10.1.22/../_depot/m-tar/10.1.22/bin/mysqld[0x516a49]
      The manual page at http://dev.mysql.com/doc/mysql/en/crashing.html contains
      

      https://travis-ci.org/AndriiNikitin/mariadb-environs-MDEV-12113/builds/226281024

      Only these configurations do show crash:

      VERSION=10.1.22 PAGE_SIZE=32k DATA_FILE_PATH='ibdata1:3M;ibdata2:10M:autoextend'
      

      the rest pass:

      VERSION=10.1.22 PAGE_SIZE=16k DATA_FILE_PATH='ibdata1:3M;ibdata2:10M:autoextend'
      VERSION=10.1.22 PAGE_SIZE=16k DATA_FILE_PATH='ibdata1:3M;ibdata2:10M:autoextend' REST=configure_rest_encryption.sh=1
      VERSION=10.1.22 PAGE_SIZE=8k DATA_FILE_PATH='ibdata1:3M;ibdata2:10M:autoextend'
      VERSION=10.1.22 PAGE_SIZE=64k DATA_FILE_PATH='ibdata1:3M;ibdata2:10M:autoextend'
      VERSION=10.1.22 PAGE_SIZE=32k DATA_FILE_PATH='ibdata1:1M;ibdata2:10M:autoextend'
      VERSION=10.1.22 PAGE_SIZE=32k DATA_FILE_PATH='ibdata1:11M;ibdata2:10M:autoextend'
      VERSION=10.1.22 PAGE_SIZE=32k DATA_FILE_PATH='ibdata1:31M;ibdata2:10M:autoextend'
      VERSION=10.1.22 PAGE_SIZE=32k DATA_FILE_PATH='ibdata1:3M:autoextend'
      VERSION=10.1.22 PAGE_SIZE=32k DATA_FILE_PATH='ibdata1:1M;ibdata2:3M:autoextend'
      VERSION=10.0.30 PAGE_SIZE=8k DATA_FILE_PATH='ibdata1:3M;ibdata2:10M:autoextend'
      VERSION=5.5.55 PAGE_SIZE=8k DATA_FILE_PATH='ibdata1:3M;ibdata2:10M:autoextend'
      

      10.2 reports an (expected) error that 3Mb is too small :
      InnoDB: The innodb_system data file 'ibdata1' must be at least 6 MB

      VERSION=10.2.5 PAGE_SIZE=32k DATA_FILE_PATH='ibdata1:3M;ibdata2:10M:autoextend'
      

      Attachments

        Issue Links

          Activity

            People

              marko Marko Mäkelä
              anikitin Andrii Nikitin (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: