storage/innobase/fsp/fsp0fsp.cc
@@ -670,16 +670,18 @@ fsp_header_init_fields(
 }
 
 #ifndef UNIV_HOTBACKUP
-/**********************************************************************//**
-Initializes the space header of a new created space and creates also the
-insert buffer tree root if space == 0. */
+/** Initializes the space header of a new created space and creates also the
+insert buffer tree root if space == 0.
+@param[in]	space_id	space id
+@param[in]	size		current size in blocks
+@param[in,out]	mtr		min-transaction
+@return	true on success, otherwise false. */
 UNIV_INTERN
-void
+bool
 fsp_header_init(
-/*============*/
-	ulint	space_id,	/*!< in: space id */
-	ulint	size,		/*!< in: current size in blocks */
-	mtr_t*	mtr)		/*!< in/out: mini-transaction */
+	ulint	space_id,
+	ulint	size,
+	mtr_t*	mtr)
 {
 	fsp_header_t*	header;
 	buf_block_t*	block;
@@ -722,11 +724,15 @@ fsp_header_init(
 	flst_init(header + FSP_SEG_INODES_FREE, mtr);
 
 	mlog_write_ull(header + FSP_SEG_ID, 1, mtr);
+
 	if (space_id == 0) {
 		fsp_fill_free_list(FALSE, space_id, header, mtr);
-		btr_create(DICT_CLUSTERED | DICT_UNIVERSAL | DICT_IBUF,
+
+		if (btr_create(DICT_CLUSTERED | DICT_UNIVERSAL | DICT_IBUF,
 			   0, 0, DICT_IBUF_ID_MIN + space_id,
-			   dict_ind_redundant, mtr);
+				dict_ind_redundant, mtr) == FIL_NULL) {
+			return (false);
+		}
 	} else {
 		fsp_fill_free_list(TRUE, space_id, header, mtr);
 	}
@@ -739,6 +745,8 @@ fsp_header_init(
 	}
 
 	fil_space_release(space);
+
+	return (true);
 }
 
 #endif /* !UNIV_HOTBACKUP */
@@ -2057,6 +2065,10 @@ fseg_create_general(
 		success = fsp_reserve_free_extents(&n_reserved, space, 2,
 						   FSP_NORMAL, mtr);
 		if (!success) {
+			ib_logf(IB_LOG_LEVEL_ERROR,
+				"Reserving %d free extents failed"
+				" could reserve only " ULINTPF " extents.",
+				2, n_reserved);
 			return(NULL);
 		}
 	}
@@ -2066,6 +2078,8 @@ fseg_create_general(
 	inode = fsp_alloc_seg_inode(space_header, mtr);
 
 	if (inode == NULL) {
+		ib_logf(IB_LOG_LEVEL_ERROR,
+			"Allocation of a new file segment inode page failed.");
 
 		goto funct_exit;
 	}
@@ -2095,6 +2109,9 @@ fseg_create_general(
 						 inode, 0, FSP_UP, mtr, mtr);
 
 		if (block == NULL) {
+			ib_logf(IB_LOG_LEVEL_ERROR,
+				"Allocation of a free page from space " ULINTPF " failed.",
+				space);
 
 			fsp_free_seg_inode(space, zip_size, inode, mtr);
 
