storage/innobase/trx/trx0rseg.cc
@@ -323,7 +323,10 @@ trx_rseg_create(
 		page_no = trx_rseg_header_create(
 			space, 0, ULINT_MAX, slot_no, &mtr);
 
-		ut_a(page_no != FIL_NULL);
+		if (page_no == FIL_NULL) {
+			mtr_commit(&mtr);
+			return (rseg);
+		}
 
 		sys_header = trx_sysf_get(&mtr);
 
